tests/NormalTests/paczka1/fuzzy1/86962485.err
Error in line 9: aigiA738i88,5
Error in line 12: A280 A738 69,0
Error in line 23: Gk6q A643 65,2
Error in line 33: YsI A280 96,4
